Minor tweaks to the symbolicref impl